Create new .env file to .gitignore

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MNEMONIC = grow head sunny twenty labor cloud auto rain swamp step fog jewel
+MNEMONIC = army usage hybrid lumber memory verb message crisp tourist depart pepper regular
